[package]
name = "reverie"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[workspace]
members= [".", "syscalls", "tools_helper", "seccomp", "preloader", "api", "examples/none", "examples/echo", "examples/counter", "examples/det" ]
default-members = [".", "syscalls", "seccomp", "preloader", "tools_helper" ]

[lib]
name = "reverie"
path = "src/lib.rs"

[[bin]]
name = "reverie"
path = "src/main.rs"

[dependencies]
libc = { version = "0.2", default-features = false }
syscalls = { path = "syscalls" }
seccomp = { path = "seccomp" }
nix = "0.15"
goblin = "0.0"
procfs = "0.5"
clap = "2.32"
lazy_static = "1.3"
colored = "1.7"
chrono = "0.4"
log = "0.4"
fern = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
libloading = "0.5"
api = { path = "api" }
hostecho = { path = "examples/hostecho" }

[build-dependencies]
cc = "1.0"
sysnum = { path = "sysnum" }
