[workspace]
members= ["reverie", "reverie-api", "reverie-seccomp", "reverie-helper", "reverie-common", "reverie-preloader", "examples/hostecho", "examples/none", "examples/echo", "examples/counter", "examples/det" ]
default-members = ["reverie", "reverie-api", "reverie-seccomp", "reverie-common", "reverie-preloader", "examples/hostecho" ]
