[package]
name = "api"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[dependencies]
syscalls = { path = "../syscalls" }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
libc = { version = "0.2", default-features = false, features = [] }
lazy_static = "1.3"
nix = "0.15"

[build-dependencies]
cc = "1.0"
