[package]
name = "api"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[dependencies]
syscalls = "0.1"
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
libc = { version = "0.2", default-features = false, features = [] }
lazy_static = "1.3"
nix = "0.15"
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
futures-util-preview = { version = "0.3.0-alpha.18" }
goblin = "0.0"
procfs = "0.5"

[build-dependencies]
cc = "1.0"
