[package]
name = "preloader"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "preloader"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
syscalls = { path = "../syscalls" }
common = { path = "../common" }
procfs = "0.5"
nix = "0.14"
libc = "0.2"

[build-dependencies]
cc = "1.0"
