[package]
name = "reverie-api"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reverie_api"
path = "src/mod.rs"

[dependencies]
syscalls = "0.1"
nix = "0.15"
libc = "0.2"
lazy_static = "1.4"
