[package]
name = "reverie-common"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reverie_common"
path = "src/lib.rs"

[dependencies]
syscalls = { version = "0.2", default-features = false }
nix = "0.15"
lazy_static = "1.4"
libc = "0.2"
