[package]
name = "reverie-helper"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[lib]
name = "reverie_helper"
crate-type = ["lib"]

[features]
std = []

[dependencies]
syscalls = "0.1"
reverie-common = { path = "../reverie-common" }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
nix = "0.15"

[build-dependencies]
cc = "1.0"
tempfile = "3.0.8"
