[package]
name = "reverie-preloader"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reverie_preloader"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
syscalls = { version = "0.2", default-features = false }
reverie-common = { path = "../reverie-common" }
reverie-seccomp = { path = "../reverie-seccomp" }
procfs = "0.7"
nix = "0.15"
libc = "0.2"

[build-dependencies]
cc = "1.0"
