[package]
name = "reverie-seccomp"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
syscalls = { version = "0.2", default-features = false }

[build-dependencies]
cc = "1.0"
