[package]
name = "reverie"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[lib]
name = "reverie"
path = "src/lib.rs"

[[bin]]
name = "reverie"
path = "src/main.rs"

[dependencies]
libc = { version = "0.2", default-features = false }
syscalls = "0.1"
reverie-api = { path = "../reverie-api" }
reverie-common = { path = "../reverie-common" }
nix = "0.15"
goblin = "0.0"
procfs = "0.5"
clap = "2.32"
lazy_static = "1.4"
colored = "1.7"
chrono = "0.4"
log = "0.4"
fern = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
