[package]
name = "tools_helper"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[lib]
name = "tools_helper"
crate-type = ["lib"]

[features]
std = []

[dependencies]
syscalls = { path = "../syscalls" }
common = { path = "../common" }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
nix = "0.13"

[build-dependencies]
cc = "1.0"
tempfile = "3.0.8"
