[package]
name = "counter"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[lib]
name = "counter"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
reverie-tools-helper = { path = "../../reverie-tools-helper" }
log = { version = "0.4", default-features = false }

[build-dependencies]
cc = "1.0"
tempfile = "3.0.8"
