[package]
name = "det"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@fb.com>"]
edition = "2018"

[lib]
name = "det"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
reverie-helper = { path = "../../reverie-helper" }
log = { version = "0.4", default-features = false }
libc = { version = "0.2", default-features = false }
