[package]
name = "echo"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[lib]
name = "echo"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
syscalls = { path = "../../syscalls" }
tools_helper = { path = "../../tools_helper" }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }

[build-dependencies]
cc = "1.0"
