[package]
name = "echo"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[lib]
name = "echo"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
reverie-helper = { path = "../../reverie-helper" }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
libc = { version = "0.2", default-features = false, features = [] }
lazy_static = "1.3"

[build-dependencies]
cc = "1.0"
