[package]
name = "hostecho"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[lib]
name = "hostecho"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
syscalls = { version = "0.2", default-features = false }
reverie-api = { path = "../../reverie-api" }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
libc = { version = "0.2", default-features = false, features = [] }
lazy_static = "1.4"
nix = "0.15"
itertools = "0.8"
