[package]
name = "none"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

[lib]
name = "none"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
reverie-tools-helper = { path = "../../reverie-tools-helper" }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }

[build-dependencies]
cc = "1.0"
tempfile = "3.0.8"
