[package]
name = "none"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@fb.com>"]
edition = "2018"

[lib]
name = "none"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
reverie-helper = { path = "../../reverie-helper" }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
