[package]
name = "api_sketch"
version = "0.1.0"
authors = ["Ryan Newton <rrnewton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members= ["."]

[dependencies]
serde = "1.0.91"
serde_json = "1.0.39"
nix = "0.14.0"
libc = "0.2.56"

