[package]
name = "api_sketch"
version = "0.1.0"
authors = ["Ryan Newton <rrnewton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members= ["."]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = "0.14"
libc = "0.2"
futures = "0.1"
tokio = "0.1"
tokio-threadpool = "0.1"
